--- a/EllipseUtils/EllipseUtils/EllipseUtils.vcxproj
+++ b/EllipseUtils/EllipseUtils/EllipseUtils.vcxproj
@@ -143,6 +143,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="ellipseParameters.h" />
+    <ClInclude Include="ellipseUtils.h" />
+    <ClInclude Include="inc_eigen.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
