--- a/EllipseUtils/EllipseUtils/EllipseUtils.vcxproj
+++ b/EllipseUtils/EllipseUtils/EllipseUtils.vcxproj
@@ -147,6 +147,7 @@
     <ClInclude Include="inc_eigen.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="testcases.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="EllipseUtils.cpp" />
@@ -156,6 +157,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="testcases.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
