--- a/EllipseUtils/EllipseUtils/EllipseUtils.vcxproj
+++ b/EllipseUtils/EllipseUtils/EllipseUtils.vcxproj
@@ -145,6 +145,7 @@
     <ClInclude Include="ellipseParameters.h" />
     <ClInclude Include="ellipseUtils.h" />
     <ClInclude Include="inc_eigen.h" />
+    <ClInclude Include="leastSquareEllipseFit.h" />
     <ClInclude Include="optionparser.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -153,6 +154,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="EllipseUtils.cpp" />
+    <ClCompile Include="leastSquareEllipseFit.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
